--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@ bld/
 [Ll]og/
 
 # Visual Studio 2015 cache/options directory
-*/.vs/
-*/.vscode/
+/Project/AvoidanceNEAT/.vs
+/Project/AvoidanceNEAT/.vscode
